--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,10 @@
     <script src="https://fb.me/react-0.14.6.js"></script>
     <script src="https://fb.me/react-dom-0.14.6.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
-    <script src="./js/hellocomponent.js"></script>
+    <script type="text/jsx" src="./js/hellocomponent.js"></script>
     <script src=""></script>
     <title>React Table</title></head>
 <body>
 <div id="react-container"></div>
-<script type="text/jsx">
-    var HelloComponent = React.createClass({
-        render: function () {
-            return <div>
-                <h1>{this.props.text}</h1>
-                <p>{this.props.children}</p>
-                </div>;
-        }
-    });
-
-    React.render(
-            <div>
-                <HelloComponent text="hello component 1">this is hello component 1 body</HelloComponent>
-                <HelloComponent text="this is a property">and so on...</HelloComponent>
-                <HelloComponent text="another react component!">ok, i get it..</HelloComponent>
-            </div>
-            , document.getElementById('react-container'));
-</script>
 </body>
 </html>
