--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://fb.me/react-0.14.6.js"></script>
-    <script src="https://fb.me/react-dom-0.14.6.js"></script>
-    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
-    <script type="text/jsx" src="./js/hellocomponent.js"></script>
+    <script src="../site/js/bundle.js"></script>
     <script src=""></script>
     <title>React Table</title></head>
 <body>
