--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,5 @@
 <body>
 <div id="react-container"></div>
 </body>
-<script src="../site/js/bundle.js"></script>
+<script src="../js/bundle.js"></script>
 </html>
