adding a bit of bootstrap styling.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <script src=""></script>
-    <title>React Table</title></head>
+    <title>React Table</title>
+</head>
 <body>
-<div id="react-container"></div>
+<div id="react-container" class="container"></div>
 </body>
 <script src="../js/bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 </html>
